# Diploma_API

./: README.md  pyproject.toml
models/: data_reqres.py  helper.py
models/page/: app.py
shemas/: shemas.py
tests/: test_reqres_api.py
